# logging

./: .gitignore  Dockerfile  json_context_manager_decorator.py  main.py  pyproject.toml  pytest.ini  test.py
.github/workflows/: main.yml
Logs/context_manager/: 106ee57f-2083-4c1d-9879-2a86c1112d4d.json  1dcb6d0b-eeff-4e7d-b6ae-6715f00abb38.json  2b176f0b-1782-4e92-af90-a5b4811a11ca.json  2c1bd55f-da24-4207-a344-70a9d2c5682d.json  33f6efd2-19f6-41fa-a6fb-325e3355fc03.json  40a1287d-14da-4f82-8f97-661c2635bef4.json  461aa03e-fc3f-4059-a3a9-a74cbc018afb.json  6bce9fe2-3d0f-4e13-97ad-51a4f01a34cb.json  6d2a99af-48d1-47d0-8023-e0eaf4bf6fd4.json  70344d29-8d6d-4d96-aaf8-8302dfc22554.json  79dbbbed-7804-4ee1-95c0-ec350cfb3969.json  7a425d89-b2d3-4dd7-80d9-7c4002777375.json  aacced3c-ab35-43ea-8194-7270faebb78b.json  b14e7009-e0fa-438e-ac3f-a7840a2a16f7.json  b284bbb0-841b-49d2-8ee9-c3b35ba50e96.json  bbf38651-8094-43be-a3eb-3265810738c2.json  c0f52e5c-4da6-43dc-aea8-e9cbf37702a1.json  c7d35240-9736-4021-8c49-ea07669176a9.json  d026ab1b-9f0a-40f6-aa69-9b24c9645a7c.json  e9c7c560-26e9-4d25-a6aa-d014ae2a3e6a.json  f01b876b-2ecc-4738-b5ad-a3b9a13d4ed6.json
Logs/decorator/: 0fb98151-6303-4481-b933-145c8fe83679.json  2af60518-8a0a-4559-acc5-ca3f422a757f.json  34145b36-26c7-469f-9f59-4d00d31ef49e.json  37e7964c-c2dd-49e0-a50a-7c8d73b24769.json  386a9d72-fff4-431b-a271-177ee994bbb3.json  3a75adb7-1394-4528-b02e-6cc4b66114da.json  49347be7-25e0-44df-b547-5621a17ba2f5.json  51c10e16-3100-4731-9b46-6010b81303bf.json  (+11 more)
unit_tests/: test_additional_functions.py
