[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "yulichka.metel",email = "yulichka.metel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.11.7,<0.12.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.13
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
